--- a/Assets/Code/Stylesheets/index.uss
+++ b/Assets/Code/Stylesheets/index.uss
@@ -2,6 +2,7 @@
     justify-content: center;
     align-items: center;
     padding: 8px;
+    color: #f5f5f5;
     
     --font-main: url("project:/Assets/ThirdParty/Thaleah_PixelFont/Materials/ThaleahFat_TTF.ttf");
 }
@@ -9,6 +10,30 @@
 Label {
     margin: 0;
     text-shadow: 0.5px 0.5px 1px #000000;
-    color: azure;
     -unity-font-definition: var(--font-main);
+}
+
+.unity-toggle__checkmark {
+    background-image: url("/Assets/Art/Textures/UI/CheckmarkIcon.png");
+    background-color: transparent;
+    border-width: 0;
+    margin-left: 55%;
+    padding: 10px;
+}
+
+.unity-button {
+    background-color: transparent;
+    border-width: 0;
+    text-shadow: 0.25px 0.25px 1px #5b5b5b;
+    background-image: url("/Assets/Art/Textures/UI/Button.png#Base");
+    height: auto;
+    width: auto;
+}
+
+.unity-button:hover {
+    background-image: url("/Assets/Art/Textures/UI/Button.png#Hover");
+}
+
+.unity-button:active {
+    background-image: url("/Assets/Art/Textures/UI/Button.png#Press");
 }
