--- a/Assets/Code/Stylesheets/Store.uss
+++ b/Assets/Code/Stylesheets/Store.uss
@@ -1,1 +1,30 @@
 ﻿@import url("index.uss");
+
+.container {
+    width: 100%;
+}
+
+.store-items-container {
+    display: flex;
+}
+
+.item-background-image {
+    width: 60px;
+    height: 60px;
+}
+
+.store-item {
+    width: 60px;
+    height: 60px;
+    margin: 2px;
+}
+
+.item-price-text {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    
+    width: 100%;
+    height: 100%;
+}
