--- a/Assets/Code/Stylesheets/PlacingShips.uss
+++ b/Assets/Code/Stylesheets/PlacingShips.uss
@@ -2,38 +2,28 @@
 
 .container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 100%;
 }
 
 .countdown-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100%;
-    width: 100%;
 }
 
 .countdown-text {
     color: white;
-    font-size: 48px; 
+    font-size: 48px;
 }
 
 .buttons-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100%;
+    width: 90%;
     height: auto;
-}
-
-.randomize-btn {
-    width: 30%;
-    background-size: contain;
-}
-
-.ready-toggle {
-    width: 30%;
-    --checkmark-icon: none;
-    background-size: contain;
-    background-image: url("/Assets/Art/Textures/UI/CheckboxButton.png#Base");
+    min-height: 36px;
 }
