--- a/Assets/Code/Stylesheets/index.uss
+++ b/Assets/Code/Stylesheets/index.uss
@@ -19,22 +19,42 @@ Label {
     align-items: center;
 }
 
-.unity-toggle__checkmark {
-    display: flex;
-    background-image: url("/Assets/Art/Textures/UI/CheckmarkIcon.png");
-    background-color: transparent;
-    border-width: 0;
-    margin-left: 55%;
-    padding: 10px;
+.unity-toggle {
+    background-image: url("/Assets/Art/Textures/UI/CheckboxButton.png#Base");
 }
 
-.unity-toggle:checked .unity-toggle__checkmark {
-    display: none;
-    background-image: url("/Assets/Art/Textures/UI/CheckmarkIcon.png");
+.unity-toggle__checkmark {
+    display: flex;
+    background-image: none;
     background-color: transparent;
     border-width: 0;
-    margin-left: 55%;
-    padding: 10px;
+    margin-right: 2.5px;
+}
+
+.unity-toggle__input {
+    display: flex;
+    align-items: flex-end;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+}
+
+.unity-toggle__text {
+    padding-right: 8px;
+    padding-left: 16px;
+}
+
+.unity-toggle:checked #unity-checkmark {
+    background-image: url("/Assets/Art/Textures/UI/CheckmarkIcon.png");
+    -unity-background-image-tint-color: greenyellow;
+    -unity-background-scale-mode: scale-to-fit;
+}
+
+.unity-toggle:hover {
+    background-image: url("/Assets/Art/Textures/UI/CheckboxButton.png#Hover");
+}
+
+.unity-toggle:active {
+    background-image: url("/Assets/Art/Textures/UI/CheckboxButton.png#Press");
 }
 
 .unity-button {
