--- a/Assets/Code/Stylesheets/Store.uss
+++ b/Assets/Code/Stylesheets/Store.uss
@@ -62,3 +62,22 @@
 
     width: 100%;
 }
+
+.money-container {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.44);
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 10px;
+}
+
+.money-icon {
+    background-image: url("/Assets/Art/Textures/UI/Coin.png");
+    width: 10px;
+    height: 10px;
+    margin-right: 4px;
+}
