--- a/Assets/Code/Stylesheets/Store.uss
+++ b/Assets/Code/Stylesheets/Store.uss
@@ -38,19 +38,33 @@
     --unity-image: url("/Assets/Art/Textures/UI/Lock.png");
 }
 
-.item-price {
+.item-price-wrapper {
     position: absolute;
     display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    flex-direction: row;
-    
+    align-items: center;
+    justify-content: flex-end;
+
     width: 100%;
     height: 100%;
 }
 
+.item-price {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    border-radius: 2px 2px 0 0;
+    padding: 2px 5px 0 5px;
+    background-color: rgba(0, 0, 0, 0.51);
+}
+
 .item-price-coin {
     --unity-image: url("/Assets/Art/Textures/UI/Coin.png");
+    margin-right: 2px;
+}
+
+.item-price-text {
+    padding: 0;
 }
 
 .item-selected-image {
