--- a/Assets/Code/Stylesheets/BattleResults.uss
+++ b/Assets/Code/Stylesheets/BattleResults.uss
@@ -5,5 +5,14 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 80%;
+    height: 100%;
+}
+
+.money-container-results {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    right: 0;
+    padding-left: 5px;
+    padding-right: 5px;
 }
