--- a/Assets/Code/Stylesheets/Store.uss
+++ b/Assets/Code/Stylesheets/Store.uss
@@ -43,10 +43,12 @@
     border-width: 1px;
     border-color: black;
     border-radius: 1px;
+    overflow: hidden;
 }
 
 .item-background-image {
     background-size: contain;
+    scale: 5;
     -unity-background-scale-mode: scale-and-crop;
 }
 
@@ -99,22 +101,4 @@
     --unity-image: url("/Assets/Art/Textures/UI/Selected.png");
 
     width: 100%;
-}
-
-.money-container {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    right: 0;
-    padding-left: 5px;
-    padding-right: 5px;
-    border-radius: 10px;
-}
-
-.money-icon {
-    background-image: url("/Assets/Art/Textures/UI/Coin.png");
-    width: 10px;
-    height: 10px;
-    margin-right: 4px;
 }
