--- a/Assets/Code/Stylesheets/index.uss
+++ b/Assets/Code/Stylesheets/index.uss
@@ -73,3 +73,21 @@ Label {
 .unity-button:active {
     background-image: url("/Assets/Art/Textures/UI/Button.png#Press");
 }
+
+.money-container {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    right: 0;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 10px;
+}
+
+.money-icon {
+    background-image: url("/Assets/Art/Textures/UI/Coin.png");
+    width: 10px;
+    height: 10px;
+    margin-right: 4px;
+}
