--- a/Assets/Code/Stylesheets/MainMenu/Settings.uss
+++ b/Assets/Code/Stylesheets/MainMenu/Settings.uss
@@ -1,4 +1,8 @@
-﻿@import url("index.uss");
+﻿@import url("../index.uss");
+
+.container {
+    width: 100%;
+}
 
 .unity-radio-button-group {
     display: flex;
