--- a/Assets/Code/Stylesheets/index.uss
+++ b/Assets/Code/Stylesheets/index.uss
@@ -8,6 +8,12 @@
     color: var(--main-text-color);
 }
 
+.styled-panel {
+    background-image: url("/Assets/Art/Textures/UI/Panel.png");
+    padding-bottom: 4px;
+    overflow: visible;
+}
+
 Label {
     margin: 0;
     text-shadow: 0.5px 0.5px 1px #000000;
@@ -97,6 +103,8 @@ Label {
 .unity-group-box {
     display: flex;
     flex-direction: row;
+    margin: 0;
+    padding: 0;
 }
 
 .money-container {
