--- a/Assets/Code/Stylesheets/MainMenu/Achievements.uss
+++ b/Assets/Code/Stylesheets/MainMenu/Achievements.uss
@@ -5,7 +5,7 @@
 }
 
 .achievements-container {
-    padding: 5px;
+    padding: 8px;
     width: 100%;
 }
 
@@ -14,8 +14,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    border-width: 1px;
-    border-color: #000000;
-    border-radius: 1px;
     padding: 5px;
+    margin-top: 1px;
+    margin-bottom: 1px;
 }
