--- a/Assets/Code/Stylesheets/MainMenu/Store.uss
+++ b/Assets/Code/Stylesheets/MainMenu/Store.uss
@@ -3,7 +3,8 @@
 .container {
     display: flex;
     justify-content: space-between;
-    width: 320px;
+    align-items: center;
+    width: 100%;
     height: 100%;
 }
 
@@ -11,12 +12,20 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: 320px;
     overflow: scroll;
+}
+
+.buttons-container {
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
 }
 
 .store-panel {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     height: auto;
 }
 
@@ -33,8 +42,7 @@
 .panel-items-container {
     display: flex;
     flex-direction: row;
-    
-    overflow: scroll;
+    flex-wrap: wrap;
 }
 
 .store-item {
