--- a/Assets/Code/Stylesheets/MainMenu/Store.uss
+++ b/Assets/Code/Stylesheets/MainMenu/Store.uss
@@ -55,7 +55,6 @@
     min-height: 60px;
     margin: 2px;
     border-width: 1px;
-    border-color: black;
     border-radius: 1px;
     overflow: hidden;
 }
@@ -63,6 +62,8 @@
 .item-background-image {
     background-size: contain;
     scale: 5;
+    width: 200%;
+    height: 200%;
     -unity-background-scale-mode: scale-and-crop;
 }
 
